---
source: src/tests/store_parsing.rs
expression: acquire_errors
---
  × Your cargo-vet store (supply-chain) has consistency errors

Error: 
  × A file in the store is not correctly formatted:
  │ 
  │ --- old/config.toml
  │ +++ new/config.toml
  │ @@ -11,14 +11,14 @@
  │  [imports.peer2]
  │  url = "https://peer1.com"
  │ 
  │ -[[exemptions.zzz]]
  │ +[[exemptions.aaa]]
  │  version = "1.0.0"
  │  criteria = "safe-to-deploy"
  │ 
  │  [[exemptions.bbb]]
  │ +version = "1.0.0"
  │  criteria = "safe-to-deploy"
  │ -version = "1.0.0"
  │ 
  │ -[[exemptions.aaa]]
  │ +[[exemptions.zzz]]
  │  version = "1.0.0"
  │  criteria = "safe-to-deploy"
  │ 
  help: run `cargo vet fmt` to reformat files in the store

Error: 
  × A file in the store is not correctly formatted:
  │ 
  │ --- old/audits.toml
  │ +++ new/audits.toml
  │ @@ -7,9 +7,9 @@
  │ 
  │  [[audits.serde]]
  │  criteria = ["safe-to-deploy", "good"]
  │ -version = "2.0.0"
  │ +version = "1.0.0"
  │ +notes = "valid field"
  │ 
  │  [[audits.serde]]
  │  criteria = ["safe-to-deploy", "good"]
  │ -version = "1.0.0"
  │ -notes = "valid field"
  │ +version = "2.0.0"
  │ 
  help: run `cargo vet fmt` to reformat files in the store
